feat(staff-api): add staff-api. Online but with 401 "bearer malformed" on JWT verification

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ PLACE_REST_API_TAG=beta
 PLACE_RUBBER_SOUL_TAG=beta
 # PLACE_TRIGGERS_TAG=beta
 # PLACE_SOURCE_TAG=beta
-# PLACE_NGINX_TAG=latest
+PLACE_NGINX_TAG=staff-api
 
 # PlaceOS variables
 
@@ -54,6 +54,11 @@ PLACE_PASSWORD=development
 PLACE_USERNAME="Place Support (localhost:8443)"
 
 PLACE_SERVER_SECRET=development
+
+# Staff API variables
+
+POSTGRES_USER=placeos
+POSTGRES_PASSWORD=development
 
 # Monitor Node variables
 
