--- a/compose-files/staff/docker-compose.yml
+++ b/compose-files/staff/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     environment:
       STAFF_TIME_ZONE: $TZ
       PG_DATABASE_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/placeos"
-      PLACE_URI: "https://placeos.local"
+      PLACE_URI: "http://placeos.local"
       PLACE_EMAIL: ${PLACE_EMAIL:-support@place.tech}
       PLACE_PASSWORD: ${PLACE_PASSWORD:-development}
       PLACE_AUTH_CLIENT_ID: "please_copy_and_paste_from_backoffice"
