--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ volumes:
   www:
 
 # YAML Anchors
+x-https-proxy: &https-proxy
+  HTTPS_PROXY: http://user@pass:proxy.url:port
+  NO_PROXY: 127.*,10.*,192.*,*.local
 
 x-deployment-env: &deployment-env
   ENV: ${ENV:-development}
@@ -132,6 +135,7 @@ services:
       << : *rethinkdb-client-env
       # Environment
       << : *deployment-env
+      #<< : *https-proxy
 
   frontends: # Frontend deployment service
     image: placeos/frontends:${PLACE_FRONTENDS_TAG:-latest}
@@ -152,6 +156,7 @@ services:
       << : *rethinkdb-client-env
       # Environment
       << : *deployment-env
+      #<< : *https-proxy
 
   source:
     image: docker.io/placeos/source:${PLACE_SOURCE_TAG:-latest}
