build(env): set tags to edge

--- a/.env
+++ b/.env
@@ -32,13 +32,13 @@ RETHINKDB_VERSION=2.4
 
 PLACE_AUTH_TAG=edge
 PLACE_CORE_TAG=edge
-# PLACE_DISPATCH_TAG=edge
+PLACE_DISPATCH_TAG=edge
 PLACE_FRONTENDS_TAG=edge
 PLACE_INIT_TAG=edge
 PLACE_REST_API_TAG=edge
 PLACE_RUBBER_SOUL_TAG=edge
-# PLACE_TRIGGERS_TAG=edge
-# PLACE_SOURCE_TAG=edge
+PLACE_TRIGGERS_TAG=edge
+PLACE_SOURCE_TAG=edge
 # PLACE_NGINX_TAG=latest
 
 # PlaceOS variables
