feat: edge pinned branch

--- a/.env
+++ b/.env
@@ -30,15 +30,15 @@ RETHINKDB_VERSION=2.4
 
 # PlaceOS Service Image Tags
 
-PLACE_AUTH_TAG=beta
-PLACE_CORE_TAG=beta
-# PLACE_DISPATCH_TAG=beta
-PLACE_FRONTENDS_TAG=beta
-PLACE_INIT_TAG=beta
-PLACE_REST_API_TAG=beta
-PLACE_RUBBER_SOUL_TAG=beta
-# PLACE_TRIGGERS_TAG=beta
-# PLACE_SOURCE_TAG=beta
+PLACE_AUTH_TAG=edge
+PLACE_CORE_TAG=edge
+# PLACE_DISPATCH_TAG=edge
+PLACE_FRONTENDS_TAG=edge
+PLACE_INIT_TAG=edge
+PLACE_REST_API_TAG=edge
+PLACE_RUBBER_SOUL_TAG=edge
+# PLACE_TRIGGERS_TAG=edge
+# PLACE_SOURCE_TAG=edge
 # PLACE_NGINX_TAG=latest
 
 # PlaceOS variables
