feat(staff): remove static IPs; add nginx image tag placeholder

--- a/.env
+++ b/.env
@@ -39,6 +39,7 @@ PLACE_REST_API_TAG=beta
 PLACE_RUBBER_SOUL_TAG=beta
 # PLACE_TRIGGERS_TAG=beta
 # PLACE_SOURCE_TAG=beta
+# PLACE_NGINX_TAG=latest
 
 # PlaceOS variables
 
