--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ETCD_VERSION=3.3.13
 # INFLUX_USER=placeos
 # INFLUX_PASSWORD=development
 INFLUX_BUCKET=place
-INFLUX_HOST=influxdb
+INFLUX_HOST=http://influx:9999
 INFLUX_ORG=PlaceOS
 INFLUX_RETENTION=4w
 
